--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head></head>
 <body>
-
-<svg source="dec_tree_with_reason_names.svg">
+<img source="dec_tree_with_reason_names.svg">
 </svg>
 </body>
 </html>
