--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head></head>
 <body>
-<img source="dec_tree_with_reason_names.svg">
+<img src="dec_tree_with_reason_names.svg">
 </body>
 </html>
