--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head></head>
 <body>
-<img src="dec_tree_with_reason_names.svg">
+<img src="https://raw.github.com/applied-statistics-minor
+/dec_tree_with_reason_names.svg?sanitize=true">
 </body>
 </html>
