--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-<img src="https://raw.github.com/applied-statistics-minor
+<img src="https://nicklogin.github.io/applied-statistics-minor
 /dec_tree_with_reason_names.svg?sanitize=true">
 </body>
 </html>
