--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head></head>
 <body>
-<img src="https://nicklogin.github.io/applied-statistics-minor
-/dec_tree_with_reason_names.svg?sanitize=true">
+<img src="https://nicklogin.github.io/applied-statistics-minor/dec_tree_with_reason_names.svg?sanitize=true">
 </body>
 </html>
